--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0"
   },
